--- a/packages/node-opcua-transport/package.json
+++ b/packages/node-opcua-transport/package.json
@@ -27,7 +27,8 @@
     },
     "devDependencies": {
         "should": "^13.2.3",
-        "sinon": "^15.0.3"
+        "sinon": "^15.0.3",
+        "node-opcua-leak-detector": "2.99.0"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
