--- a/packages/node-opcua-transport/package.json
+++ b/packages/node-opcua-transport/package.json
@@ -1,6 +1,6 @@
 {
     "name": "node-opcua-transport",
-    "version": "2.99.0",
+    "version": "2.101.0",
     "description": "pure nodejs OPCUA SDK - module transport",
     "main": "./dist/source/index.js",
     "types": "./dist/source/index.d.ts",
@@ -26,9 +26,9 @@
         "node-opcua-utils": "2.98.1"
     },
     "devDependencies": {
+        "node-opcua-leak-detector": "2.99.0",
         "should": "^13.2.3",
-        "sinon": "^15.0.3",
-        "node-opcua-leak-detector": "2.99.0"
+        "sinon": "^15.0.3"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
