--- a/packages/node-opcua/package.json
+++ b/packages/node-opcua/package.json
@@ -6,6 +6,7 @@
     "types": "./dist/index.d.ts",
     "scripts": {
         "clean": "npx rimraf node_modules dist *.tsbuildinfo",
+        "test": "mocha",
         "build": "tsc -b"
     },
     "engines": {
