--- a/packages/node-opcua-address-space/tsconfig.json
+++ b/packages/node-opcua-address-space/tsconfig.json
@@ -1,4 +1,5 @@
-        {
+{
+    "extends": "../../tsconfig.common.json",
     "compilerOptions": {
         "composite": true,
         "incremental": true
