--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -73,8 +73,8 @@ jobs:
         with:
           path: ~/.pnpm-store
           key: ${{ runner.os }}-pnpm-store
-      - run: npm install -g nyc@14 istanbul coveralls codecov
-      - run: npm install -g codeclimate-test-reporter
+      - run: npm install -g nyc@15 istanbul coveralls codecov
+      # - run: npm install -g codeclimate-test-reporter
       - run: npm install -g pnpm
       - run: pnpm recursive install --no-frozen-lockfile
       - run: pnpm run build 
@@ -83,7 +83,7 @@ jobs:
       - run: pnpm run pretest
       - run: make test-cov     
         
-      # - name: coveralls
-      #  uses: coverallsapp/github-action@master
-      #   with:
-      #   github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Coveralls
+        uses: coverallsapp/github-action@v2
+        with:
+            github-token: ${{ secrets.GITHUB_TOKEN }}
