--- a/packages/node-opcua-aggregates/package.json
+++ b/packages/node-opcua-aggregates/package.json
@@ -6,7 +6,7 @@
     "types": "./dist/index.d.ts",
     "scripts": {
         "build": "tsc -b",
-        "test": "mocha",
+        "test": "mocha test/*.ts",
         "lint": "eslint source test",
         "format": "prettier --write source test",
         "clean": "npx rimraf node_modules dist *.tsbuildinfo"
