--- a/packages/node-opcua-modeler/package.json
+++ b/packages/node-opcua-modeler/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "cli-table3": "^0.6.3",
         "csv-parse": "5.4.0",
+        "node-opcua-address-space-base": "2.106.0",
         "node-opcua-address-space": "2.106.0",
         "node-opcua-assert": "2.105.0",
         "node-opcua-basic-types": "2.105.0",
