--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "test": "cd packages && node --expose-gc --max-old-space-size=1024 run_all_mocha_tests.js",
         "test1": "cd packages && node run_all_mocha_tests.js",
         "testlerna": "lerna run --concurrency  8 --no-sort --stream test",
-        "eslint": "eslint packages/**/src/*.js  packages/**/souce/*.ts packages/**/test_helpers/*",
+        "eslint": "eslint packages/**/src/*.js  packages/**/source/*.ts packages/**/test_helpers/*",
         "eslint-fix": "eslint --fix packages/*/src/**.js packages/*/__tests__/ utils/*.js scripts/*.js",
         "generate_doc": "make doc",
         "generate_autodoc": "npx autodoc -o _tmp_generated_doc bin/binaryStream.js",
