--- a/packages/node-opcua-units/package.json
+++ b/packages/node-opcua-units/package.json
@@ -21,7 +21,7 @@
     "devDependencies": {
         "should": "^13.2.3",
         "sinon": "^15.2.0",
-        "xlsx": "*"
+        "xlsx": "0.18.5"
     },
     "author": "Etienne Rossignon",
     "license": "MIT",
