--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,6 @@
 {
-  "packages": [
-    "packages/*",
-    "packages_extra/*"
-  ],
-  "version": "2.108.0",
-  "npmClient": "pnpm",
-  "exact": true
+    "packages": ["packages/*", "packages_extra/*"],
+    "version": "2.109.0",
+    "npmClient": "pnpm",
+    "exact": true
 }
