--- a/packages/node-opcua-samples/package.json
+++ b/packages/node-opcua-samples/package.json
@@ -16,8 +16,10 @@
         "clean": "npx rimraf certificates"
     },
     "dependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/underscore": "^1.11.6",
         "@types/yargs": "17.0.24",
+        "bcrypt": "^5.1.1",
         "chalk": "4.1.2",
         "easy-table": "^1.2.0",
         "env-paths": "2.2.1",
