--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -8,6 +8,8 @@
         "test": "echo \"Error: no test specified\" && exit 0"
     },
     "dependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "bcrypt": "^5.1.1",
         "chalk": "4.1.2",
         "node-opcua": "2.110.0",
         "node-opcua-client": "2.110.0",
